23-Feb-2016 Fixes #151. Added ExportDefinitionFile property (type: Bam.Core.TokenizedString) to C.ICommonLinkerSettingsWin, defaulting to null. This is for the .def file. If this is set to a valid path, it is passed to the linker and the contents used as the list of exported symbols for the binary. If the value remains null, the linker will generate a .def file based on metadata on symbols in the code.

23-Feb-2016 Fixes #150. Needed to invoke Parse() on the Bam.Core.TokenizedStrings for RPath and RPathLink.

22-Feb-2016 Fixes #147. Added PerformCompilation boolean property to C.ObjectFile (and thus all derived types of object files). Default value is true. This is to allow the compilation of a source file to be disabled, and yet still appear in project files for browsing. Possible uses for this is for marking source files that are #included into other source files.

22-Feb-2016 Allow changing the header search path from C.ProceduralHeaderFile, by overriding the IncludeDirectory property.

17-Feb-2016 Fixes #145. Modules using the C package that have the [C.Prebuilt] attribute now contribute any headers into a non-buildable project in VisualStudio. This is useful for browsing the headers and intellisense-like features of the IDE. The interface Bam.Core/Interfaces/IBuildModeMetaData.cs has been extended with a read-only Boolean property CanCreatePrebuiltProjectForAssociatedFiles, which each build mode must implement, indicating whether there is support for such prebuilt un-buildable projects.

17-Feb-2016 Fixes #144. The TokenizedString post-function @relativeto(path,baseDir) will now return path if there is no common root found, rather than throw an exception.

16-Feb-2016 ======== Version 1.0.1b3 Release ========
